# glskelview

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindGLFW3.cmake  glfwConfig.cmake
media/: tube_smooth.skin
src/: CMakeLists.txt  Main.cpp  common.h  commonfltk.h  constants.h
src/animation/: animationclip.cpp  animationclip.h  model.h  skeleton.cpp  skeleton.h  skin.cpp  skin.h
src/app/: flapp.cpp  flapp.h  glplayback.cpp  glplayback.h
src/geometry/: core.cpp  core.h  vertex.h
src/math/: lerp.cpp  lerp.h  matrix34.cpp  matrix34.h  vector3.h
src/parser/: token.cpp  token.h
src/physics/: ray.cpp  ray.h
src/scene/: camera.cpp  camera.h  entity.cpp  entity.h  entityfactory.cpp  entityfactory.h  world.cpp  world.h
